feat: change button to a

--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
           EMBRACE OPPORTUNITIES, FOLLOW YOUR CURIOSITY, AND LIVE LIFE TO THE
           FULLEST.
         </p>
-        <button>View Work</button>
+        <a
+          href=""
+          class="border px-4 py-2 rounded-lg text-sm font-EB-Garamond uppercase mt-8 hover:bg-white hover:text-gray-800"
+        >
+          View Work
+        </a>
       </div>
     </div>
     <script type="module" src="/main.js"></script>
