style: change font and adjust button position

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@700&family=Oswald:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Audiowide&family=Play:wght@700&display=swap"
       rel="stylesheet"
     />
     <link
@@ -22,11 +22,11 @@
         -webkit-font-smoothing: antialiased;
       }
 
-      .font-EB-Garamond {
-        font-family: 'EB Garamond', serif;
+      .font-Audiowide {
+        font-family: 'Audiowide', cursive;
       }
-      .font-Oswald {
-        font-family: 'Oswald', sans-serif;
+      .font-Play {
+        font-family: 'Play', sans-serif;
       }
     </style>
   </head>
@@ -36,16 +36,16 @@
         class="absolute text-white text-center"
         style="top: 50%; transform: translate(-50%, -50%); left: 50%"
       >
-        <h1 class="font-EB-Garamond text-sm uppercase tracking-wide">
+        <h1 class="font-Audiowide text-sm uppercase tracking-wide">
           George Kwan
         </h1>
-        <p class="font-Oswald text-4xl">
+        <p class="font-Play text-4xl">
           EMBRACE OPPORTUNITIES, FOLLOW YOUR CURIOSITY, AND LIVE LIFE TO THE
           FULLEST.
         </p>
         <a
           href=""
-          class="border px-4 py-2 rounded-lg text-sm font-EB-Garamond uppercase mt-8 hover:bg-white hover:text-gray-800"
+          class="border px-4 py-2 rounded-lg text-sm font-Audiowide uppercase mt-8 hover:bg-white hover:text-gray-800 inline-block"
         >
           View Work
         </a>
