--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           FULLEST.
         </p>
         <a
-          href=""
+          href="https://github.com/georgekwan"
           class="border px-4 py-2 rounded-lg text-sm font-Audiowide uppercase mt-8 hover:bg-white hover:text-gray-800 inline-block"
         >
           View Work
