chore: change text

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
           George Kwan
         </h1>
         <p class="font-Play text-4xl">
-          EMBRACE OPPORTUNITIES, FOLLOW YOUR CURIOSITY, AND LIVE LIFE TO THE
-          FULLEST.
+          EMBRACE OPPORTUNITIES, FOLLOW CURIOSITY, AND LIVE LIFE TO THE FULLEST.
         </p>
         <a
           href="https://github.com/georgekwan"
