style: add opacity to text

--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
         class="absolute text-white text-center"
         style="top: 50%; transform: translate(-50%, -50%); left: 50%"
       >
-        <h1 class="font-Audiowide text-sm uppercase tracking-wide">
+        <h1 class="font-Audiowide text-sm uppercase tracking-wide opacity-0">
           George Kwan
         </h1>
-        <p class="font-Play text-4xl">
+        <p class="font-Play text-4xl opacity-0">
           EMBRACE OPPORTUNITIES, FOLLOW CURIOSITY, AND LIVE LIFE TO THE FULLEST.
         </p>
         <a
           href="https://github.com/georgekwan"
-          class="border px-4 py-2 rounded-lg text-sm font-Audiowide uppercase mt-8 hover:bg-white hover:text-gray-800 inline-block"
+          class="border px-4 py-2 rounded-lg text-sm font-Audiowide uppercase mt-8 hover:bg-white hover:text-gray-800 inline-block opacity-0"
         >
           View Work
         </a>
