feat: add fade in for text and button

--- a/index.html
+++ b/index.html
@@ -36,13 +36,17 @@
         class="absolute text-white text-center"
         style="top: 50%; transform: translate(-50%, -50%); left: 50%"
       >
-        <h1 class="font-Audiowide text-sm uppercase tracking-wide opacity-0">
+        <h1
+          id="georgekwan"
+          class="font-Audiowide text-sm uppercase tracking-wide opacity-0"
+        >
           George Kwan
         </h1>
-        <p class="font-Play text-4xl opacity-0">
+        <p id="aboutMe" class="font-Play text-4xl opacity-0">
           EMBRACE OPPORTUNITIES, FOLLOW CURIOSITY, AND LIVE LIFE TO THE FULLEST.
         </p>
         <a
+          id="viewWorkBtn"
           href="https://github.com/georgekwan"
           class="border px-4 py-2 rounded-lg text-sm font-Audiowide uppercase mt-8 hover:bg-white hover:text-gray-800 inline-block opacity-0"
         >
