feat: slow down text animation

--- a/index.html
+++ b/index.html
@@ -39,16 +39,22 @@
         <h1
           id="georgekwan"
           class="font-Audiowide text-sm uppercase tracking-wide opacity-0"
+          style="transform: translateY(30px)"
         >
           George Kwan
         </h1>
-        <p id="aboutMe" class="font-Play text-4xl opacity-0">
+        <p
+          id="aboutMe"
+          class="font-Play text-4xl opacity-0"
+          style="transform: translateY(30px)"
+        >
           EMBRACE OPPORTUNITIES, FOLLOW CURIOSITY, AND LIVE LIFE TO THE FULLEST.
         </p>
         <a
           id="viewWorkBtn"
           href="https://github.com/georgekwan"
           class="border px-4 py-2 rounded-lg text-sm font-Audiowide uppercase mt-8 hover:bg-white hover:text-gray-800 inline-block opacity-0"
+          style="transform: translateY(30px)"
         >
           View Work
         </a>
