style: adjust browser resizing

--- a/index.html
+++ b/index.html
@@ -34,8 +34,13 @@
     <div id="app">
       <div
         id="container"
-        class="absolute text-white text-center"
-        style="top: 50%; transform: translate(-50%, -50%); left: 50%"
+        class="absolute text-white text-center w-full max-w-2xl px-6"
+        style="
+          top: 50%;
+          transform: translate(-50%, -50%);
+          left: 50%;
+          width: 100;
+        "
       >
         <h1
           id="georgekwan"
