feat: change about

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           class="font-Play text-4xl opacity-0"
           style="transform: translateY(30px)"
         >
-          EMBRACE OPPORTUNITIES, FOLLOW CURIOSITY, AND LIVE LIFE TO THE FULLEST.
+          EMBRACE OPPORTUNITIES, AND FOLLOW CURIOSITY.
         </p>
         <a
           id="viewWorkBtn"
