--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
           transform: translate(-50%, -50%);
           left: 50%;
           width: 100;
+          color: #fff;
+          text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa,
+            0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
         "
       >
         <h1
