feat: change glowing text

--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
           left: 50%;
           width: 100;
           color: #fff;
-          text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa,
-            0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
+          text-shadow: 0 0 1px #fff, 0 0 2px #fff, 0 0 3px #fff, 0 0 3px #fec47f,
+            0 0 11px #fec47f, 0 0 12px #fec47f, 0 0 13px #fec47f,
+            0 0 19px #fec47f;
         "
       >
         <h1
