feat: add glowing animation to text

--- a/index.html
+++ b/index.html
@@ -50,14 +50,46 @@
         <h1
           id="georgekwan"
           class="font-Audiowide text-sm uppercase tracking-wide opacity-0"
-          style="transform: translateY(30px)"
+          style="
+            transform: translateY(30px);
+            animation: pulsate 0.11s ease-in-out infinite alternate;
+            @keyframes pulsate {
+              100% {
+                text-shadow: 0 0 4px #fff, 0 0 11px #fff, 0 0 19px #fff,
+                  0 0 40px #fec47f, 0 0 80px #fec47f, 0 0 90px #fec47f,
+                  0 0 100px #fec47f, 0 0 150px #fec47f;
+              }
+
+              0% {
+                text-shadow: 0 0 4px #fff, 0 0 10px #fff, 0 0 18px #fff,
+                  0 0 38px #fec47f, 0 0 73px #fec47f, 0 0 80px #fec47f,
+                  0 0 94px #fec47f, 0 0 140px #fec47f;
+              }
+            }
+          "
         >
           George Kwan
         </h1>
         <p
           id="aboutMe"
           class="font-Play text-4xl opacity-0"
-          style="transform: translateY(30px)"
+          style="
+            transform: translateY(30px);
+            animation: pulsate 0.11s ease-in-out infinite alternate;
+            @keyframes pulsate {
+              100% {
+                text-shadow: 0 0 4px #fff, 0 0 11px #fff, 0 0 19px #fff,
+                  0 0 40px #fec47f, 0 0 80px #fec47f, 0 0 90px #fec47f,
+                  0 0 100px #fec47f, 0 0 150px #fec47f;
+              }
+
+              0% {
+                text-shadow: 0 0 4px #fff, 0 0 10px #fff, 0 0 18px #fff,
+                  0 0 38px #fec47f, 0 0 73px #fec47f, 0 0 80px #fec47f,
+                  0 0 94px #fec47f, 0 0 140px #fec47f;
+              }
+            }
+          "
         >
           EMBRACE OPPORTUNITIES, AND FOLLOW CURIOSITY.
         </p>
