--- a/index.html
+++ b/index.html
@@ -43,53 +43,20 @@
           width: 100;
           color: #fff;
           text-shadow: 0 0 1px #fff, 0 0 2px #fff, 0 0 3px #fff, 0 0 3px #fec47f,
-            0 0 11px #fec47f, 0 0 12px #fec47f, 0 0 13px #fec47f,
-            0 0 19px #fec47f;
+            0 0 5px #fec47f, 0 0 6px #fec47f, 0 0 6px #fec47f, 0 0 10px #fec47f;
         "
       >
         <h1
           id="georgekwan"
           class="font-Audiowide text-sm uppercase tracking-wide opacity-0"
-          style="
-            transform: translateY(30px);
-            animation: pulsate 1.5s ease-in-out infinite alternate;
-            @keyframes pulsate {
-              100% {
-                text-shadow: 0 0 4px #fff, 0 0 11px #fff, 0 0 19px #fff,
-                  0 0 40px #fec47f, 0 0 80px #fec47f, 0 0 90px #fec47f,
-                  0 0 100px #fec47f, 0 0 150px #fec47f;
-              }
-
-              0% {
-                text-shadow: 0 0 2px #fff, 0 0 5px #fff, 0 0 9px #fff,
-                  0 0 19px #fec47f, 0 0 36px #fec47f, 0 0 40px #fec47f,
-                  0 0 47px #fec47f, 0 0 70px #fec47f;
-              }
-            }
-          "
+          style="transform: translateY(30px)"
         >
           George Kwan
         </h1>
         <p
           id="aboutMe"
           class="font-Play text-4xl opacity-0"
-          style="
-            transform: translateY(30px);
-            animation: pulsate 1.5s ease-in-out infinite alternate;
-            @keyframes pulsate {
-              100% {
-                text-shadow: 0 0 4px #fff, 0 0 11px #fff, 0 0 19px #fff,
-                  0 0 40px #fec47f, 0 0 80px #fec47f, 0 0 90px #fec47f,
-                  0 0 100px #fec47f, 0 0 150px #fec47f;
-              }
-
-              0% {
-                text-shadow: 0 0 2px #fff, 0 0 5px #fff, 0 0 9px #fff,
-                  0 0 19px #fec47f, 0 0 36px #fec47f, 0 0 40px #fec47f,
-                  0 0 47px #fec47f, 0 0 70px #fec47f;
-              }
-            }
-          "
+          style="transform: translateY(30px)"
         >
           EMBRACE OPPORTUNITIES, AND FOLLOW CURIOSITY.
         </p>
@@ -97,23 +64,7 @@
           id="viewWorkBtn"
           href="https://github.com/georgekwan"
           class="border px-4 py-2 rounded-lg text-sm font-Audiowide uppercase mt-8 hover:bg-white hover:text-gray-800 inline-block opacity-0"
-          style="
-            transform: translateY(30px);
-            animation: pulsate 1.5s ease-in-out infinite alternate;
-            @keyframes pulsate {
-              100% {
-                text-shadow: 0 0 4px #fff, 0 0 11px #fff, 0 0 19px #fff,
-                  0 0 40px #fec47f, 0 0 80px #fec47f, 0 0 90px #fec47f,
-                  0 0 100px #fec47f, 0 0 150px #fec47f;
-              }
-
-              0% {
-                text-shadow: 0 0 2px #fff, 0 0 5px #fff, 0 0 9px #fff,
-                  0 0 19px #fec47f, 0 0 36px #fec47f, 0 0 40px #fec47f,
-                  0 0 47px #fec47f, 0 0 70px #fec47f;
-              }
-            }
-          "
+          style="transform: translateY(30px)"
         >
           View Work
         </a>
