--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
           left: 50%;
           width: 100;
           color: #fff;
-          text-shadow: 0 0 1px #fff, 0 0 2px #fff, 0 0 3px #fff, 0 0 3px #fec47f,
-            0 0 5px #fec47f, 0 0 6px #fec47f, 0 0 6px #fec47f, 0 0 10px #fec47f;
+          text-shadow: 0 0 0.5px #fff, 0 0 1px #fff, 0 0 1.5px #fff,
+            0 0 3px #fec47f, 0 0 3px #fec47f, 0 0 3px #fec47f, 0 0 3px #fec47f,
+            0 0 5px #fec47f;
         "
       >
         <h1
