style: add neon flicker to text

--- a/index.html
+++ b/index.html
@@ -18,16 +18,42 @@
       rel="stylesheet"
     />
     <style>
-      body {
-        margin: 0;
-        -webkit-font-smoothing: antialiased;
-      }
+          body {
+            margin: 0;
+            -webkit-font-smoothing: antialiased;
+          }
 
-      .font-Audiowide {
-        font-family: 'Audiowide', cursive;
-      }
-      .font-Play {
-        font-family: 'Play', sans-serif;
+          .font-Audiowide {
+            font-family: 'Audiowide', cursive;
+          }
+          .font-Play {
+            font-family: 'Play', sans-serif;
+            animation: pulsate 0.91s ease-in-out infinite alternate;
+          }
+          @keyframes pulsate {
+
+        100% {
+
+          text-shadow:
+          0 0 1px #fff, 0 0 1.5px #fff, 0 0 2.5px #fff,
+            0 0 2px #fec47f,
+            0 0 5px #fec47f,
+            0 0 10px #fec47f,
+            0 0 12px #fec47f,
+            0 0 15px #fec47f;
+
+        }
+
+        0% {
+
+          text-shadow:
+          0 0 0.5px #fff, 0 0 1px #fff, 0 0 1.5px #fff,
+          0 0 1px #fec47f,
+            0 0 3px #fec47f,
+            0 0 6px #fec47f,
+            0 0 9px #fec47f,
+            0 0 12px #fec47f;
+
       }
     </style>
   </head>
